# webgenplate

./: README.md  boilerplate_html.txt  cli.py  generator.py  main.py  pyproject.toml
boilerplates/: html_boilerplate.txt
src/webgenplate/: __main__.py  cli.py  generator.py
src/webgenplate/boilerplates/: html_boilerplate.txt
