[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "webgenplate"
version = "0.1.0"
description = "CLI tool to generate simple web project templates"
authors = [
    { name = "Davi Vitorino" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
webgenplate = "webgenplate.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
webgenplate = ["boilerplates/*.txt"]